[gd_scene load_steps=26 format=2]

[ext_resource path="res://Enemies/Bat/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://Overlap/hurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/hitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/softCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/wanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://shaders/white_shader.tres" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 69.0072

[sub_resource type="CircleShape2D" id=8]
radius = 9.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.09902

[sub_resource type="CircleShape2D" id=11]
radius = 4.0

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "end"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:render_priority")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 16 )
frames = SubResource( 6 )
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDectionZone" index="0"]
modulate = Color( 0.333333, 1, 0.0901961, 1 )
shape = SubResource( 9 )

[node name="hurtBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="hurtBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 8 )

[node name="hitBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[node name="softCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="softCollision" index="0"]
shape = SubResource( 11 )

[node name="wanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/end = SubResource( 14 )
anims/start = SubResource( 15 )

[connection signal="no_health" from="Stats" to="." method="_no_health"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="invincibility_ended" from="hurtBox" to="." method="_on_hurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="hurtBox" to="." method="_on_hurtBox_invincibility_started"]

[editable path="PlayerDectionZone"]
[editable path="hurtBox"]
[editable path="hitBox"]
[editable path="softCollision"]
